# translation-service

./: .flake8  .gitignore  README.md  docker-entrypoint.sh  mypy.ini  pyproject.toml
src/: alembic.ini  main.py  settings.py
src/infrastructure/repositories/: words_repository.py
src/infrastructure/requesters/: google_translate_requester.py
src/models/: responses.py  words.py
src/routers/: words_router.py
src/services/: words_service.py
src/utils/: response.py
